# rusty-cli

./: .gitignore  BUILDME.md  Cargo.toml  FIXME.md  README.md
src/: cache.rs  cli.rs  config.rs  context.rs  export.rs  main.rs  session.rs  templating.rs
src/mcp/: client.rs
src/providers/: anthropic.rs  cli_passthrough.rs  deepseek.rs  grok.rs  mod.rs  ollama.rs  openai.rs  registry.rs
src/tools/: echo.rs  mcp_tool.rs  mod.rs  read_file.rs
